--- a/CRMdeImobiliaria/pom.xml
+++ b/CRMdeImobiliaria/pom.xml
@@ -57,6 +57,12 @@
             <artifactId>javafx-fxml</artifactId>
             <version>22.0.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version>
+        </dependency>
     </dependencies>
 
     <build>
