--- a/CRMdeImobiliaria/pom.xml
+++ b/CRMdeImobiliaria/pom.xml
@@ -69,6 +69,12 @@
             <artifactId>json</artifactId>
             <version>20231013</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.1</version>
+        </dependency>
     </dependencies>
 
     <build>
